fixed the navbar problem on mobile.

--- a/client/src/scss/components/_navbar.scss
+++ b/client/src/scss/components/_navbar.scss
@@ -174,7 +174,7 @@
 
   &__close-btn {
     position: absolute;
-    bottom: 2px;
+    top: 2px;
     right: 2px;
     background-color: transparent;
     width: 37px;
